# TB4_Autonomous_Robotics

Kalman_Filter/fp_kalman_filter_pkg/: package.xml  setup.cfg  setup.py
Kalman_Filter/fp_kalman_filter_pkg/fp_kalman_filter_pkg/: fp_bagrun.py  kalman544_kalman_filter.py
Kalman_Filter/fp_kalman_filter_pkg/fp_kalman_filter_pkg/install/: local_setup.sh  setup.sh
Labs/Lab_1/: lab1_robot.py
Labs/Lab_2/: MTE544Lab_2_runner.py  README.md  map_maze_2.yaml  point_3_datascan_formatted.py  point_6_datascan_formatted.py  similarity.py  test.txt
Labs/Lab_2/Scan Data from Bag Files/: point_3_datascan.txt  point_6_datascan.txt
Labs/Lab_2/bag_files/point_3/: metadata.yaml  point_3_0.db3
Labs/Lab_2/bag_files/point_6/: metadata.yaml  point_6_0.db3
Labs/Lab_2/bagreader/: package.xml  setup.cfg  setup.py
Labs/Lab_2/bagreader/bagreader/: MTE544_Lab2.py  bagrun.py  lab2_runner  map_data.txt  map_maze_2.pgm  point_3_datascan_formatted - Copy.py  point_3_datascan_formatted.py  similarity.py  (+3 more)
Labs/Lab_2/files_copied_to_home/: .bashrc  .fastdds.xml  .home_fastdds.xml
Labs/Lab_3/: A_Star.py  A_Star_robot.py  Entry_1.csv  Entry_1.pgm  Entry_1.yaml  MapNode.py  Test.py  a_star_skeleton1.py  driveRobot.py  driveRobotRos2.py  mp_sub.py
Labs/Lab_3/lab_3_package/: a_star_skeleton1.py  cost_map_no_postbox.py  costmap_no_postbox.py  costmap_raw_msg_no_postbox.txt  drive_robot.py  package.xml  robotController.py  setup.cfg  setup.py  test.py
Labs/Lab_3/lab_3_package/lab_3_package/: A_Star_Pygame_testing.py  A_Star_robot.py  drive_robot.py  mp_sub.py  robotController.py
(+1 files in other folders)
