<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab_3_package</name>
  <version>0.0.0</version>
  <description>Lab 3 Package</description>
  <maintainer email="rr3khan@uwaterloo.ca">rr3khan@uwaterloo.ca</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>gazebo</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlebot3</depend>
  <depend>turtlebot3_navigation2</depend>
   <depend>nav2_simple_commander</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
